--- a/pom.xml
+++ b/pom.xml
@@ -63,10 +63,18 @@
                     <configurationDirectory>etc</configurationDirectory>
                     <configurationSourceDirectory>src/main/config</configurationSourceDirectory>
                     <copyConfigurationDirectory>true</copyConfigurationDirectory>
+                    <extraJvmArguments>-server</extraJvmArguments>
                     <programs>
                         <program>
                             <mainClass>com.jaumo.pushinator.Server</mainClass>
                             <id>pushinator</id>
+                            <!--
+                            <jvmSettings>
+                                <initialMemorySize>20m</initialMemorySize>
+                                <maxMemorySize>1024m</maxMemorySize>
+                                <maxStackSize>128m</maxStackSize>
+                            </jvmSettings>
+                            -->
                         </program>
                     </programs>
                 </configuration>
